Update Java and Spring Boot version